[package]
name = "imageless"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
num = "0.4.0"
serde = { version = "1.0.164", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.40"
toml = "0.7.4"

[dependencies.image]
version = "0.24.2"
features = [
	"avif-encoder",
	"jpeg",
	"jpeg_rayon",
	"png",
	"rgb",
	"webp-encoder"
]
